52_NetworkPolicies/configs/eg2-whitelist-client/np-allow-client-to-httpd.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: give-centos-access-to-httpd 
  namespace: default
spec:
  podSelector:
    matchLabels:
      component: httpd_webserver    # This np gets applied to all pods with this label. 
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:               
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: codingbee
    - podSelector:
        matchLabels:
          app: curl_client
